EXM-49092: remove class cast